# ArchMaths-cpp

./: CMakeLists.txt
.github/workflows/: release.yml
include/math/: MathTypes.h
include/rendering/: GLCanvas.h
src/rendering/: GLCanvas.cpp
src/ui/: EntryWidget.cpp  MainWindow.cpp
